# ibovespa-backend

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/database/: db.py  first_migration.py
app/dependencies/: authentication.py
app/models/: __init__.py  auth.py  data.py
app/resources/: config.py
app/routes/: auth.py  categories.py  data.py  modelo.py
app/schemas/: category.py  register.py  user.py
app/services/: jwt.py  security.py
